# vite_wasm_template

./: Cargo.toml  readme.md
src/: lib.rs  utils.rs
wasm_test/: package.json  vite.config.js
wasm_test/src/: App.vue
