[package]
name = "test_wasm"
version = "0.1.0"
authors = ["Sieyalixnet <sieyalixnet@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook ="0.1.6"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = 3

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.js-sys]
version = "0.3"